--- a/src/styles/Information.css
+++ b/src/styles/Information.css
@@ -189,6 +189,8 @@
   font-size: 1.125rem;
   margin-bottom: 2rem;
   opacity: 0.95;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Responsive Design */
